--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "bin": {
     "create-ssy": "./bin/index.js"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
